--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -15,8 +15,7 @@ img.a {
 }
 
 .vidPad {
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding: .5%;
 }
 
 img.b {
@@ -152,6 +151,8 @@ img.b {
   .sidebar a {
     font-size: 18px;
   }
+
+  
 }
 
 .footer {
@@ -186,11 +187,41 @@ img.b {
   .textRight {
     text-align: right;
   }
+
+  .tab {
+    overflow: hidden;
+    background-color: #ede7ff;
+    border-radius: 25px 25px 0px 0px;
+  }
+
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+    border-radius: 0px 0px 25px 25px;
+  }
+
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-family: 'Solitreo', cursive;
+    color: #2E0B5B;
+    font-size: medium;
+  }
 }
 
 
 
 @media screen and (max-width: 992px) {
+  body {
+    overflow-x: hidden;
+    /* Hide scrollbars */
+  }
   .CenterMobile {
     display: flex;
     justify-content: center;
@@ -200,6 +231,33 @@ img.b {
     padding-top: 10px;
     text-align: center;
   }
+
+  .tab {
+    overflow: hidden;
+    background-color: #ede7ff;
+    border-radius: 25px 0px 0px 25px;
+  }
+ 
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+    border-radius: 0px 25px 25px 0px;
+  }
+
+  .tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-family: 'Solitreo', cursive;
+  color: #2E0B5B;
+  font-size: medium;
+  }
+  
 }
 
 .Break {
@@ -221,3 +279,21 @@ img.b {
 #BottomRounded {
   border-radius: 0px 0px 25px 25px;
 }
+
+/* Style the tab */
+
+
+/* Style the buttons that are used to open the tab content */
+
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ece1fb;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #dcc4fb;
+}
+
+/* Style the tab content */
